--- a/login/style.css
+++ b/login/style.css
@@ -1,12 +1,11 @@
-
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: 'Playfair Display', serif;
-background-color: #f9f0f0;
+    background-color: #f9f0f0;
 }
 
-.form{
+.form {
     text-align: center;
     position: absolute;
     top: 50%;
@@ -18,23 +17,24 @@ background-color: #f9f0f0;
     border-radius: 7px;
 }
 
-label{
+label {
     display: block;
     margin-bottom: 5px;
 }
 
-.form div{
+.form div {
     margin-bottom: 20px;
     position: relative;
 }
 
-i{
+i {
     position: absolute;
     top: 70%;
     left: 11%;
     transform: translate(-50%, -50%);
 }
-input{
+
+input {
     padding: 5px;
     padding-left: 25px;
     margin: 5px;
@@ -43,13 +43,14 @@ input{
 
 }
 
-h1{
+h1 {
     position: absolute;
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-button{
+
+button {
     padding: 5px 15px;
     background-color: #D5B4B4;
     border: none;
@@ -57,8 +58,8 @@ button{
     border-radius: 6px;
 }
 
-button:hover{
+button:hover {
     cursor: pointer;
-    box-shadow: 3px 3px 3px 0px rgba(212,146,146,0.75);
+    box-shadow: 3px 3px 3px 0px rgba(212, 146, 146, 0.75);
 
 }
