--- a/home/style.css
+++ b/home/style.css
@@ -1,12 +1,9 @@
-
-
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: 'Playfair Display', serif;
-background-color: #f9f0f0;
+    background-color: #f9f0f0;
 }
-
 
 header {
     position: sticky;
@@ -17,13 +14,44 @@ header {
     z-index: 100;
     display: flex;
     justify-content: right;
-    padding: 13px 25px;
+    padding-right: 40px;
     font-size: 20px;
     margin-bottom: 30px;
-
 }
 
 header a {
     text-decoration: none;
     color: black;
 }
+
+header h1.logo {
+    padding-right: 37%;
+    font-size: 30px;
+}
+
+
+
+
+
+
+/* home */
+img{
+    width: 40%;
+}
+section div.first{
+    display: flex;
+    gap: 3%;
+    padding: 30px;
+    margin: 30px;
+
+}
+div.text{
+    font-size: 20px;
+    padding-top: 30px;
+    padding-right: 30px;
+
+}
+
+
+/* catalog */
+
